# switchboard

./: README.md  pyproject.toml
src/switchboard/: __main__.py  app.py
src/switchboard/services/: __init__.py  models.py  systemd.py
src/switchboard/styles/: app.tcss
src/switchboard/widgets/: __init__.py  detail_pane.py  service_table.py
